ТЗ 5 спринта - замечания исправлены.